<resources>
    <string name="app_name">GWF Test</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_email">You must enter an email</string>
    <string name="enter_password">You must enter a password</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_meters">Total Meters</string>
    <string name="total_usage">Total Usage (m3)</string>
    <string name="total_readouts">Total Readouts</string>
    <string name="total_errors">Total Errors</string>
    <string name="search">Search</string>
    <string name="type_search_meter">Type to search a Meter…</string>
    <string name="sing_out">Sign Out</string>
    <string name="something_went_wrong">Oops! Something went wrong :(</string>
    <string name="last_readout">Last Readout:</string>
    <string name="volume">Volume:</string>
    <string name="battery_lifetime">Battery Lifetime:</string>
    <string name="encoder_error">Encoder Error:</string>
    <string name="us_water_level">Us Water Level:</string>
    <string name="v_sensor">V Sensor Comm Timout:</string>
    <string name="water_level_error">Water Level Error:</string>
    <string name="t_air_error">T Air Error:</string>
    <string name="t_water_error">T Water Error:</string>
    <string name="w_air_error">W Air Error:</string>
    <string name="w_water_error">W Water Error:</string>
    <string name="velocity_error">Velocity Error:</string>
    <string name="system_error">"System Error:"</string>
</resources>